<resources>
    <string name="app_name">bot_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="waga_kg">Waga(kg)</string>
    <string name="waga">waga</string>
    <string name="wzrost_cm">Wzrost(cm)</string>
    <string name="wzrost">wzrost</string>
    <string name="oblicz">Oblicz</string>
    <string name="kobieta">Kobieta</string>
    <string name="mezczyzna">Mężczyzna</string>
    <string name="przemiana_materii">Przemiana Materii</string>
    <string name="wiek">Wiek</string>
</resources>
