<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="93dp">

        <TextView
            android:id="@+id/text_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/przemiana_materii"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/kobieta" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/mezczyzna" />

        </RadioGroup>

        <TextView
            android:id="@+id/text_dashboard2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waga_kg"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/waga"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wzrost_cm"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/wzrost"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wiek"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/wiek"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/oblicz" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="#E91E63"
            android:textSize="30sp"
            android:textStyle="italic" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>